# daily-checkin-bot

./: Cargo.toml  LICENSE  README.md  config.json
src/: main.rs
src/utils/: mod.rs
src/utils/configs/: configs.rs
src/utils/requests/: requests.rs
src/utils/schedules/: schedules.rs
